--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,10 +2,10 @@
 name = "win7-notifications"
 version = "0.0.0"
 description = "Send Windows 10 styled notifications on Windows 7."
-authors = ["Tauri Programme within The Commons Conservancy"]
+authors = [ "Tauri Programme within The Commons Conservancy" ]
 edition = "2018"
 keywords = [ "notifications", "win7", "windows", "windows7", "windows 7" ]
-license = "Apache-2.0"
+license = "Apache-2.0 OR MIT"
 readme = "README.md"
 repository = "https://github.com/tauri-apps/win7-notifications"
 documentation = "https://docs.rs/win7-notifications"
