chore: update README.md

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = "Send Windows 10 styled notifications on Windows 7."
 authors = [ "Tauri Programme within The Commons Conservancy" ]
 edition = "2018"
-keywords = [ "notifications", "win7", "windows", "windows7", "windows 7" ]
+keywords = [ "notifications", "win7", "windows", "windows7" ]
 license = "Apache-2.0 OR MIT"
 readme = "README.md"
 repository = "https://github.com/tauri-apps/win7-notifications"
