--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,12 +3,13 @@ name = "win7-notifications"
 version = "0.2.2"
 description = "Send Windows 10 styled notifications on Windows 7."
 authors = [ "Tauri Programme within The Commons Conservancy" ]
-edition = "2018"
-keywords = [ "notifications", "win7", "windows", "windows7" ]
+edition = "2021"
+rust-version = "1.56"
 license = "Apache-2.0 OR MIT"
 readme = "README.md"
 repository = "https://github.com/tauri-apps/win7-notifications"
 documentation = "https://docs.rs/win7-notifications"
+keywords = [ "notifications", "win7", "windows", "windows7" ]
 categories = [ "gui" ]
 
 [build-dependencies]
