--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,12 +12,22 @@ documentation = "https://docs.rs/win7-notifications"
 keywords = [ "notifications", "win7", "windows", "windows7" ]
 categories = [ "gui" ]
 
-[build-dependencies]
-windows = "0.21.1"
-
 [dependencies]
-windows = "0.21.1"
 once_cell = "1.8.0"
+
+[dependencies.windows]
+version = "0.23.0"
+features = [
+    "Win32_Foundation",
+    "Win32_System_LibraryLoader",
+    "Win32_System_Com",
+    "Win32_System_Diagnostics_Debug",
+    "Win32_Graphics_Gdi",
+    "Win32_Graphics_Dwm",
+    "Win32_UI_Shell",
+    "Win32_UI_Controls",
+    "Win32_UI_WindowsAndMessaging",
+]
 
 [dev-dependencies]
 tao = "0.5.2"
