--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "win7-notifications"
-version = "0.2.2"
+version = "0.2.3"
 description = "Send Windows 10 styled notifications on Windows 7."
 authors = [ "Tauri Programme within The Commons Conservancy" ]
 edition = "2021"
@@ -15,18 +15,18 @@ categories = [ "gui" ]
 [dependencies]
 once_cell = "1.8.0"
 
-[dependencies.windows]
-version = "0.23.0"
-features = [
-    "Win32_Foundation",
-    "Win32_System_LibraryLoader",
-    "Win32_System_Com",
-    "Win32_System_Diagnostics_Debug",
-    "Win32_Graphics_Gdi",
-    "Win32_Graphics_Dwm",
-    "Win32_UI_Shell",
-    "Win32_UI_Controls",
-    "Win32_UI_WindowsAndMessaging",
+  [dependencies.windows]
+  version = "0.23.0"
+  features = [
+  "Win32_Foundation",
+  "Win32_System_LibraryLoader",
+  "Win32_System_Com",
+  "Win32_System_Diagnostics_Debug",
+  "Win32_Graphics_Gdi",
+  "Win32_Graphics_Dwm",
+  "Win32_UI_Shell",
+  "Win32_UI_Controls",
+  "Win32_UI_WindowsAndMessaging"
 ]
 
 [dev-dependencies]
