ci: fix publish workflow

--- a/.github/workflows/covector-version-or-publish.yml
+++ b/.github/workflows/covector-version-or-publish.yml
@@ -18,6 +18,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
+      - run: rustup update
       - name: cargo login
         run: cargo login ${{ secrets.CRATE_TOKEN }}
       - name: git config
