--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,9 +15,10 @@ categories = [ "gui" ]
 [dependencies]
 once_cell = "1.8.0"
 
-  [dependencies.windows]
-  version = "0.23.0"
+[dependencies.windows]
+  version = "0.28.0"
   features = [
+  "alloc",
   "Win32_Foundation",
   "Win32_System_LibraryLoader",
   "Win32_System_Com",
