--- a/.changes/config.json
+++ b/.changes/config.json
@@ -1,41 +1,9 @@
 {
   "gitSiteUrl": "https://github.com/tauri-apps/win7-notifications/",
-  "timeout": 3600000,
-  "additionalBumpTypes": ["housekeeping"],
   "pkgManagers": {
     "rust": {
       "version": true,
-      "getPublishedVersion": "cargo search ${ pkg.pkg } --limit 1 | sed -nE 's/^[^\"]*\"//; s/\".*//1p'",
-      "prepublish": [
-        "cargo install cargo-audit --features=fix",
-        {
-          "command": "cargo generate-lockfile",
-          "dryRunCommand": true,
-          "runFromRoot": true,
-          "pipe": true
-        },
-        {
-          "command": "echo \"# Cargo Audit\"",
-          "dryRunCommand": true,
-          "pipe": true
-        },
-        {
-          "command": "echo \"\\`\\`\\`\"",
-          "dryRunCommand": true,
-          "pipe": true
-        },
-        {
-          "command": "cargo audit ${ process.env.CARGO_AUDIT_OPTIONS || '' }",
-          "dryRunCommand": true,
-          "runFromRoot": true,
-          "pipe": true
-        },
-        {
-          "command": "echo \"\\`\\`\\`\"",
-          "dryRunCommand": true,
-          "pipe": true
-        }
-      ],
+      "getPublishedVersion": "cargo search ${ pkg.pkg } --limit 1 | sed -nE 's/^[^\"]*\"//; s/\".*//1p' -",
       "publish": [
         {
           "command": "cargo package --allow-dirty",
@@ -61,23 +29,12 @@
           "dryRunCommand": true,
           "pipe": true
         }
-      ],
-      "postpublish": [
-        "git tag ${ pkg.pkg }-v${ pkgFile.versionMajor } -f",
-        "git tag ${ pkg.pkg }-v${ pkgFile.versionMajor }.${ pkgFile.versionMinor } -f",
-        "git push --tags -f"
-      ],
-      "assets": [
-        {
-          "path": "${ pkg.path }/${ pkg.pkg }-${ pkgFile.version }.crate",
-          "name": "${ pkg.pkg }-${ pkgFile.version }.crate"
-        }
       ]
     }
   },
   "packages": {
     "win7-notifications": {
-      "path": "./",
+      "path": ".",
       "manager": "rust"
     }
   }
