--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,3 +32,7 @@ once_cell = "1.9.0"
 
 [dev-dependencies]
 tao = "0.5.2"
+
+[package.metadata.docs.rs]
+default-target = "x86_64-pc-windows-msvc"
+targets = ["x86_64-pc-windows-msvc"]
