--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,12 +26,12 @@ once_cell = "1.9.0"
   "Win32_Foundation",
   "Win32_System_LibraryLoader",
   "Win32_System_Com",
-  "Win32_System_Diagnostics_Debug",
   "Win32_Graphics_Gdi",
   "Win32_Graphics_Dwm",
   "Win32_UI_Shell",
   "Win32_UI_Controls",
-  "Win32_UI_WindowsAndMessaging"
+  "Win32_UI_WindowsAndMessaging",
+  "Win32_Media_Audio"
 ]
 
 [dev-dependencies]
