--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,10 +21,9 @@ targets = [ "x86_64-pc-windows-msvc" ]
 [dependencies]
 once_cell = "1.9.0"
 
-[dependencies.windows]
-version = "0.32.0"
+[dependencies.windows-sys]
+version = "0.33.0"
 features = [
-  "alloc",
   "Win32_Foundation",
   "Win32_System_LibraryLoader",
   "Win32_System_Com",
@@ -37,5 +36,5 @@ features = [
 ]
 
 [dev-dependencies]
-tao = "0.6.2"
+winit = "0.26"
 image = "0.24"
